selectBy 버그 수정